main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  type: LoadBalancer
  selector:
    app: main
  ports:
    - port: 80
      targetPort: 80
